# asciicast

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  noxfile.py  pyproject.toml  ruff.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
examples/: demo1.cast  demo1.py
src/asciicast/: __init__.py  cast.py  cli.py
tests/: __init__.py  cast_test.py  test_asciicast.py
